supplier module backend made tenant aware